# my-rustlets

./: Cargo.toml
.github/workflows/: release-plz.yml  rust.yml
crates/aicommit-rs/: CHANGELOG.md  Cargo.toml  README.md
crates/aicommit-rs/docs/: aicommit-rs.usage.kdl  usage.md
crates/aicommit-rs/examples/: aicommit-template  aicommit.toml
crates/aicommit-rs/src/: commit.rs  config.rs  diff.rs  lib.rs  main.rs
crates/reddit-wallpapers/: CHANGELOG.md  Cargo.toml  README.md
crates/reddit-wallpapers/src/: cli.rs  data.rs  main.rs
crates/weather-rs/: Cargo.toml
crates/weatherapi-rs/: CHANGELOG.md  Cargo.toml  README.md
crates/weatherapi-rs/docs/: usage.spec.kdl
crates/weatherapi-rs/src/: main.rs
crates/weatherapi-rs/src/files/: cli.rs  output.rs
