[package]
name = "aicommit-rs"
version = "0.0.7"
edition = "2024"

[dependencies]
dirs = "6.0.0"
dotenvy = "0.15.7"
git2 = "0.20.1"
openai-api-rs = "6.0.3"
serde = "1.0.219"
tokio = { version = "1.44.2", features = ["full"] }
toml = "0.8.20"
clap = { version = "4.5.37", features = ["derive", "cargo"] }
clap_usage = "2.0.3"

[profile.release]
lto = true
strip = "debuginfo"
