[package]
name = "aicommit-rs"
version = "0.0.7"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Small CLI AI git commit generator that works with any OpenAI compatible enpoint"
authors = ["Shukhrat Mukimov <mukimov@gmail.com>"]

[dependencies]
dirs = "6.0.0"
dotenvy = "0.15.7"
git2 = "0.20.1"
openai-api-rs = "9.0.0"
serde = "1.0.219"
tokio = { version = "1.44.2", features = ["full"] }
toml = "0.9.8"
clap = { version = "4.5.37", features = ["derive", "cargo"] }
clap_usage = "2.0.3"
