[package]
name = "reddit-wallpapers"
version = "0.0.7"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Little CLI tool allows to download top wallpapers from Reddit"
authors = ["Shukhrat Mukimov <mukimov@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.13.2", features = [
  "json",
  "query",
], default-features = true }
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1" }
simple_logger = { version = "5.1.0" }
urlencoding = { version = "2.1.3" }
log = { version = "0.4.29" }
regex = "1.12.3"
image = "0.25.9"
dirs = "6.0.0"
clap = { version = "4.5.57", features = ["derive"] }
strum = "0.27.2"
strum_macros = "0.27.2"
anyhow = "1.0.101"
thiserror = "2.0.18"
