[package]
name = "weatherapi-rs"
version = "0.3.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Small weather CLI util for weatherapi.com"
repository = "https://github.ciom/mufasa71/my-rustlets/weatherapi-rs"
authors = ["Shukhrat Mukimov <mukimov@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
clap = { version = "4.5.37", features = ["derive", "cargo"] }
clap_usage = "2.0.3"
serde_json = "1.0.140"
toml = "0.9.8"
dirs = "6.0.0"
